fix whitespace

--- a/frontend/src/app/modules/main/subjects/subjects.component.scss
+++ b/frontend/src/app/modules/main/subjects/subjects.component.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
 }
 .link-img{
     width: 100px;
@@ -48,4 +48,7 @@
 .page-header {
     display: flex;
     justify-content: space-between;
+}
+.title {
+    white-space: normal !important;
 }
